--- a/2.3.5 垃圾邮件检测.ipynb
+++ b/2.3.5 垃圾邮件检测.ipynb
@@ -366,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)]"
   },
   "toc": {
    "base_numbering": 1,
@@ -394,6 +394,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "58cc5e62b6d7f104b0f39fbb10e6e5f4108e182efeae1c0058ff8379dbedb313"
+   }
   }
  },
  "nbformat": 4,
